tests/expected_package_import_unknown.diag.out
<input>:1:1: error: unknown import 'missing::child'
    import missing::child;
    ^^^^^^^^^^^^^^^^^^^^^^
